feat: bug fix overhaul
